samples/_failures_safe/1761260029_135cb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd5ebc8f.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_cd5ebc8f.c:136:13: error: expected expression at end of input
  136 |             !matrix_get(a, 1, 0, &a3) || !matrix_get(a, 1, 1, &a4)) return
      |             ^
./samples/SAFE/__tmp_cd5ebc8f.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd5ebc8f.c:136:13: error: expected declaration or statement at end of input
